[package]
name = "monotonic-time-rs"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Monotonic Time"
repository = "https://github.com/piot/monotonic-time-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
test-log = "^0.2.16"
log = "0.4.22"
