[package]
name = "monotonic-time-rs"
version = "0.0.10"
edition = "2021"
license = "MIT"
description = "Monotonic Time"
repository = "https://github.com/piot/monotonic-time-rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = {version="0.2", optional = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.76", features = ["Performance", "Window"] }
wasm-bindgen = "0.2.99"

[dev-dependencies]
test-log = "^0.2.16"
log = "0.4.22"

[features]
metricator-compat = ["dep:num-traits"]
default = []